refactor answer factory