@@ -1,12 +1,11 @@
 package com.sb.resnyxbot.qr;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -14,9 +13,7 @@ public final class SafeEncode implements Encode {
 
     public static final String SAFE_TYPE = "png";
 
-    private static final List<String> TYPES = Collections.unmodifiableList(
-            List.of("png", "jpeg")
-    );
+    private static final List<String> TYPES = List.of("png", "jpeg");
 
     private final Encode origin;
 
